# Nautilus-One

./: .dockerignore  .gitignore  INSTALL.md  OCU_MANUAL.md  README.md  nano_packages.list  pi_packages.list  super_client_configuration_file.xml  third_parties.repos
.github/workflows/: build_test.yaml
auv_autonomy/: CMakeLists.txt  package.xml
auv_autonomy/src/: april_follow.cpp  april_follow_server.cpp  forward.cpp  heading_test.cpp
auv_bringup/: CMakeLists.txt  README.md  package.xml
auv_bringup/cfg/: gz_blue.config  sub.param
auv_bringup/launch/: apriltag_launch.py  base_controller.launch.py  cameras_launch.py  comms_launch.py  controller.launch.py  dropper.launch.py  launch_camera.py  launch_inference.py  nano.launch.py  pi.launch.py  qualify_inference_launch.py  qualify_infernece_launch.py  real_launch.py  sim_launch.py
auv_bringup/params/: apriltag_params.yaml  color_detector_params.yaml  params_1.yaml  real_controller_params.yaml  real_mavros_params.yaml
auv_bt/: CMakeLists.txt  package.xml
auv_bt/behavior_tree_xml/: arm_test.xml  basic_autonomy.xml  basic_autononmy.xml  depth_calibrate_test.xml  elapsed_descend_test.xml  elapsed_forward_test.xml  elapsed_led_test.xml  elapsed_test.xml  elapsed_turn_test.xml  gate_detection_forward_complete_test.xml  gate_detection_forward_follow_test.xml  gate_detection_forward_test.xml  gate_detection_test.xml  qualify_tree_nodes.xml  working_basic_autonomy.xml  working_elapsed_forward_test.xml
auv_bt/cmake/: FindZMQ.cmake
auv_bt/include/auv_bt/: CalibrateDepth.hpp  Descend.hpp  Elapsed.hpp  FollowGate.hpp  Forward.hpp  Gate.hpp  SetLEDColor.hpp  SetMode.hpp  Turn.hpp  isArmed.hpp  isDepthCalibrated.hpp
auv_bt/include/auv_bt/ctrl_support/: BTActionNode.hpp  BTServiceNode.hpp  BTStatefulActionNode.hpp
auv_bt/src/: bt_qualify_main.cpp
auv_bt/src/auv_bt/: CalibrateDepth.cpp  Descend.cpp  Elapsed.cpp  FollowGate.cpp  Forward.cpp  Gate.cpp  SetLEDColor.cpp  SetMode.cpp  Turn.cpp  isArmed.cpp  isDepthCalibrated.cpp
auv_camera/: README.md  package.xml  setup.cfg  setup.py
auv_camera/auv_camera/: camera_recorder.py  frame_recorder.py  publish_camera.py  record_camera.py  recorder_launcher.py
auv_comms/: CMakeLists.txt  README.md  package.xml
auv_comms/src/: color_detector.cpp  color_detector_debug.cpp  color_detector_pub.cpp  color_detector_server.cpp  read_sequence.cpp  read_sequence_server.cpp
auv_controller/: CMakeLists.txt  README.md  package.xml
auv_controller/config/: base_controller_params.yaml
auv_controller/include/auv_controller/: dumb_controller.hpp
auv_controller/launch/: base_controller.launch.py
auv_controller/scripts/: imu_orientation_plotter.py  velocity_plotter.py
auv_controller/src/: base_controller.cpp  cmd_vel_publisher.cpp  control_cmd_cli.cpp  controller_actions.cpp  controller_services.cpp  depth_controller.cpp  depth_hold.cpp  dumb_controller.cpp  heading_test.cpp  twist_to_thrust.cpp  twist_to_thruster_subscriber.cpp  velocity_plotter.py
auv_description/: CMakeLists.txt  package.xml
auv_description/worlds/: competition.world  competition2.world  muralone_competition.world  muralone_pool.world  muralone_underwater.world  pool.world  pool_buckets.world  pool_gate.world  underwater.world
auv_diagnostics/: CMakeLists.txt  package.xml  setup.cfg  setup.py
auv_diagnostics/auv_diagnostics/: cameras.py  depth.py  diagnostics.py  serial_communication.py
auv_diagnostics/display_module/: DEV_Config.cpp  DEV_Config.h  Debug.h  GUI_Paint.cpp  GUI_Paint.h  LCD_Driver.cpp  LCD_Driver.h  converter.py  display_module.ino  font12.cpp  font16.cpp  font20.cpp  font24.cpp  font24CN.cpp  font8.cpp  fonts.h  image.cpp  image.h
auv_diagnostics/launch/: diagnostics_launch.py
auv_diagnostics/src/: diagnostics_node.cpp
auv_diagonostics/: CMakeLists.txt  package.xml
auv_diagonostics/src/: diagonostics_node.cpp
auv_experiments/: CMakeLists.txt  package.xml
auv_experiments/src/: qualify.cpp
auv_hud/: CMakeLists.txt  package-lock.json  package.json  package.xml  pnpm-lock.yaml
auv_hud/config/: topics.yaml
auv_hud/dashboard/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  server.js
auv_hud/dashboard/src/app/: globals.css  layout.tsx  page.tsx
auv_hud/dashboard/src/app/params/: page.tsx
auv_hud/dashboard/src/app/streams/: page.tsx
auv_hud/dashboard/src/components/: Navbar.tsx
auv_hud/launch/: dashboard_launcher.py
auv_hud/src/: bag_recorder.cpp
auv_interfaces/: CMakeLists.txt  README.md  package.xml
auv_interfaces/action/: DepthDescent.action  FollowAprilTag.action  ReadCommSequence.action
auv_interfaces/msg/: Detection.msg  DetectionArray.msg  Manipulator.msg
auv_interfaces/src/: mavros_relay.cpp
auv_interfaces/srv/: AngleCorrection.srv  ImageColorDetect.srv  ManipulatorCommand.srv  SetColor.srv  YoloInference.srv
auv_manipulator/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
auv_manipulator/auv_manipulator/: cmd_manip.py  manip_controller.py  manipulator_client.py  manipulator_service.py
auv_manipulator/src/: dropper.cpp
auv_mav_utils/: package.xml  setup.cfg  setup.py
auv_mav_utils/auv_mav_utils/: calibrate.py  depth_publisher.py  heading_test.py
auv_ml/: README.md  package.xml  setup.cfg  setup.py
auv_ml/auv_ml/: gate_ratio.py  uncomp.py  (+5 more)
auv_ml_jetson/: package.xml  setup.cfg  setup.py
auv_sensing/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
auv_sensing/auv_sensing/: yolo_inference_server.py
auv_sensing/cmake/modules/: Findonnxruntime.cmake
auv_sensing/launch/: camera_launch.py
auv_sensing/src/: infer_camera.cpp  infer_camera_gate.cpp  publish_webcam.cpp  republish_sdp.cpp  republish_sdp_camera_info.cpp  sense.cpp  show_camera.cpp  show_camera_compressed.cpp  show_camera_sdp.cpp  show_camera_uncomp.cpp  show_camera_url.cpp  yolo_inference_server.cpp
auv_sensing/srv/: YoloInference.srv
base_controller_py/: package.xml  setup.cfg  setup.py
docker/: NanoDockerFile  PiDockerFile  README.md  build-nano.sh  build-pi.sh
install/: local_setup.sh  setup.sh
log/: latest_build
(+140 files in other folders)
