<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_manipulator</name>
  <version>0.0.0</version>
  <description>Everything Manipulator</description>
  <maintainer email="this.abhinav26@gmail.com">abhinav</maintainer>
  <license>no</license>

  <depend>auv_interfaces</depend>
  <exec_depend>python3-adafruit-circuitpython-servokit</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
