<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>auv_manipulator</name>
  <version>0.0.1</version>
  <description>Package for AUV manipulator control through RC override</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>mavros_msgs</depend>
  <depend>auv_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>